@@ -67,9 +67,11 @@ void Check4(PseudoSprite&data){
 	if(_grfver>6)CheckLangID(lang&0x7F,2);
 	if(lang&0x80){
 		i=6;
-		if(nument!=0)
-			CheckTextID(0x48,data.ExtractWord(4),4)&&CheckTextID(0x48,data.ExtractWord(4)+nument-1,3);
-		else
+		if(nument!=0) {
+			uint base_id = data.ExtractWord(4);
+			uint last_id = base_id + nument - 1;
+			for (uint i = base_id; i <= last_id; i++) CheckTextID(0x48, i, 4);
+		} else
 			IssueMessage(WARNING1,NO_TEXTS);
 	}else if(feature==0x48)IssueMessage(ERROR,INVALID_FEATURE);
 	else if(feature>3)IssueMessage(ERROR,NO_BYTE_IDS,feature);
